--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@ layout: compress
     {{ scss_sheet | scssify }}
     </style>
 
-    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript" src="https://cdn.rawgit.com/mathjax/MathJax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
 </head>
 <body>
