--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,6 +30,15 @@
             {% endif %}
         {% endif %}
 
+        {% if site.tags == true %}
+            {% if page.title != "Tags" %}
+                <li class="item">
+                    <a class="link" href="{{ site.url }}/tags">Tags</a>
+                </li>
+            {% endif %}
+        {% endif %}
+
+
         {% if site.resume == true %}
             <li class="item">
                 <a class="link" href="{% if site.resume-external %}{{ site.resume-url }}{% else %}{{ site.url }}/{{ site.resume-url }}{% endif %}">Résumé</a>
